test/files/neg/macro-deprecate-idents.check
macro-deprecate-idents.scala:2: warning: macro is now a reserved word; usage as an identifier is deprecated
  val macro = ???
      ^
macro-deprecate-idents.scala:6: warning: macro is now a reserved word; usage as an identifier is deprecated
  var macro = ???
      ^
macro-deprecate-idents.scala:10: warning: macro is now a reserved word; usage as an identifier is deprecated
  type macro = Int
       ^
macro-deprecate-idents.scala:14: warning: macro is now a reserved word; usage as an identifier is deprecated
  class macro
        ^
macro-deprecate-idents.scala:18: warning: macro is now a reserved word; usage as an identifier is deprecated
  class macro
        ^
macro-deprecate-idents.scala:22: warning: macro is now a reserved word; usage as an identifier is deprecated
  object macro
         ^
macro-deprecate-idents.scala:26: warning: macro is now a reserved word; usage as an identifier is deprecated
  object macro
         ^
macro-deprecate-idents.scala:30: warning: macro is now a reserved word; usage as an identifier is deprecated
  trait macro
        ^
macro-deprecate-idents.scala:34: warning: macro is now a reserved word; usage as an identifier is deprecated
  trait macro
        ^
macro-deprecate-idents.scala:37: warning: macro is now a reserved word; usage as an identifier is deprecated
package macro {
        ^
macro-deprecate-idents.scala:38: warning: macro is now a reserved word; usage as an identifier is deprecated
  package macro.bar {
          ^
macro-deprecate-idents.scala:43: warning: macro is now a reserved word; usage as an identifier is deprecated
  package macro.foo {
          ^
macro-deprecate-idents.scala:48: warning: macro is now a reserved word; usage as an identifier is deprecated
  val Some(macro) = Some(42)
           ^
macro-deprecate-idents.scala:49: warning: macro is now a reserved word; usage as an identifier is deprecated
  macro match {
  ^
macro-deprecate-idents.scala:50: warning: macro is now a reserved word; usage as an identifier is deprecated
    case macro => println(macro)
         ^
macro-deprecate-idents.scala:50: warning: macro is now a reserved word; usage as an identifier is deprecated
    case macro => println(macro)
                          ^
macro-deprecate-idents.scala:55: warning: macro is now a reserved word; usage as an identifier is deprecated
  def macro = 2
      ^
error: No warnings can be incurred under -Xfatal-warnings.
17 warnings found
one error found
